fixed form labels spacing and checked html validation errors

--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@
         flex-wrap: wrap;
     }
 
+    .cta {
+        margin: 0 auto;
+    }
+
     .form {
         position: relative;
         top: 15px;
@@ -139,6 +143,11 @@
         height: 55px;
     }
 
+    .pword {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     .span-name {
         align-self: flex-start;
     }
@@ -150,7 +159,7 @@
 
     .inp {
         background: #f5f8fa;
-        font: 400 19px Arial;
+        font: 400 13px Arial;
         outline: none;
         padding-bottom: 5px;
         padding-top: 2px;
